2019-07-13 Mao Han <han_mao@c-sky.com>

	* Makefile.am: Add C-SKY.
	* csky_attrs.c: New file.
	* csky_cfi.c: New file.
	* csky_corenote.c: Likewise.
	* csky_init.c: Likewise.
	* csky_initreg.c: Likewise.
	* csky_regs.c: Likewise.
	* csky_reloc.def: Likewise.
	* csky_symbol.c: Likewise.

2019-06-28  Mark Wielaard  <mark@klomp.org>

	* aarch64_init.c (aarch64_init.c): Remove eh->name;
	* alpha_init.c (alpha_init.c): Remove eh->name;
	* arm_init.c (arm_init.c): Remove eh->name;
	* bpf_init.c (bpf_init.c): Remove eh->name;
	* i386_init.c (i386_init.c): Remove eh->name;
	* ia64_init.c (ia64_init.c): Remove eh->name;
	* m68k_init.c (m68k_init.c): Remove eh->name;
	* ppc64_init.c (ppc64_init.c): Remove eh->name;
	* ppc_init.c (ppc_init.c): Remove eh->name;
	* riscv_init.c (riscv_init.c): Remove eh->name;
	* s390_init.c (s390_init.c): Remove eh->name;
	* sh_init.c (sh_init.c): Remove eh->name;
	* sparc_init.c (sparc_init.c): Remove eh->name;
	* tilegx_init.c (tilegx_init.c): Remove eh->name;
	* x86_64_init.c (x86_64_init.c): Remove eh->name;

2019-04-14  Mark Wielaard  <mark@klomp.org>

	* riscv_cfi.c: Fix BACKEND define.

2019-02-15  Mark Wielaard  <mark@klomp.org>

	* s390_init.c (s390_init): Hook check_special_symbol.
	* s390_symbol.c (s390_check_sepcial_symbol): New function.

2018-12-27  Jim Wilson  <jimw@sifive.com>

	* Makefile.am (riscv_SRCS): Add riscv64_corenote.c.
	* riscv64_corenote.c: New file.
	* riscv_corenote.c (BITS): New.
	(BACKEND): Conditional on BITS.
	(ULONG, UID_T, GID_T, ALIGN_ULONG, ALIGN_UID_T, ALIGN_GID_T): Likewise.
	(TYPE_ULONG, TYPE_UID_T, TYPE_GID_T): Likewise.
	(prstatus_regs): Use BITS/8 instead of 8.
	(PRSTATUS_REGS_SIZE): Likewise.
	* riscv_init.c (riscv64_core_note): Declare.
	(riscv_init): If ELFCLASS64 then use riscv64_core_note hook.

	* Makefile.am (riscv_SRCS): Add riscv_retval.c.
	* riscv_init.c: Include libelfP.h.
	(riscv_return_value_location_lp64d): Declare.
	(riscv_init): Delete unused attribute from elf parameter.  Register